phloc-commons + upgrade javamelodu

--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
 			<artifactId>opentoutatice-web-mode-ecm</artifactId>
 			<version>${ottc.webmode.version}</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>acaren-nuxeo-studio</groupId>
 			<artifactId>ACRENNES</artifactId>
@@ -408,7 +408,7 @@
 		<dependency>
 			<groupId>net.bull.javamelody</groupId>
 			<artifactId>javamelody-core</artifactId>
-			<version>1.62.0</version>
+			<version>1.81.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jrobin</groupId>
@@ -416,6 +416,12 @@
 			<version>1.5.9</version>
 		</dependency>
 
+		<!-- Missing deps in nuxeo distrib -->
+		<dependency>
+			<groupId>com.phloc</groupId>
+    		<artifactId>phloc-commons</artifactId>
+  			<version>4.3.2</version>
+		</dependency>
 
 	</dependencies>
 
