--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>toutatice-ecm.acrennes</groupId>
 	<artifactId>acrennes-nx-distrib</artifactId>
-	<version>4.7.27</version>
+	<version>4.7-SNAPSHOT</version>
 	<name>Ac-rennes nuxeo distribution</name>
 	<packaging>pom</packaging>
 
@@ -38,7 +38,7 @@
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>
 
 		<!-- Add-ons métier -->
-		<acrennes.version>4.1.3</acrennes.version>
+		<acrennes.version>4.1.5</acrennes.version>
 		<shortname.version>1.0.4</shortname.version>
 
 		<toutapad.version>4.7.17</toutapad.version>
