--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fr.toutatice.acrennes.nuxeo</groupId>
-	<artifactId>toutatice-nuxeo-distribution</artifactId>
-	<version>4.9-SNAPSHOT</version>
-	<name>Toutatice Nuxeo distribution</name>
+	<artifactId>toutatice-nuxeo-syndication-distribution</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>Toutatice Nuxeo Syndication distribution</name>
 	<packaging>pom</packaging>
 
 	<properties>
