--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<nuxeo.version>6.1.2</nuxeo.version>
+		<nuxeo.version>6.1.3</nuxeo.version>
 		<opentoutatice.version>4.7.28</opentoutatice.version>
 		<ottc.es.version>4.7.22</ottc.es.version>
 		<ottc.collab.version>4.7.17</ottc.collab.version>
@@ -38,7 +38,7 @@
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>
 
 		<!-- Add-ons métier -->
-		<acrennes.version>4.1.7</acrennes.version>
+		<acrennes.version>4.1.8</acrennes.version>
 		<shortname.version>1.0.4</shortname.version>
 
 		<toutapad.version>4.7.17</toutapad.version>
@@ -131,9 +131,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.2.1</version>
-				<configuration>
-					<releaseProfiles>unpack,pack</releaseProfiles>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -171,6 +168,11 @@
 			<artifactId>opentoutatice-ecm-platform-web</artifactId>
 			<version>${opentoutatice.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>opentoutatice-ecm.platform</groupId>
+			<artifactId>opentoutatice-ecm-platform-probes</artifactId>
+			<version>${opentoutatice.version}</version>
+		</dependency>		
 		<dependency>
 			<groupId>opentoutatice-ecm.platform</groupId>
 			<artifactId>opentoutatice-ecm-platform-reporting</artifactId>
