--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 
 		<!-- Logs -->
 		<log4j.version>2.8</log4j.version>
+		<javamelody.version>1.82.0</javamelody.version>
 	</properties>
 
 	<build>
@@ -654,7 +655,7 @@
 		<dependency>
 			<groupId>net.bull.javamelody</groupId>
 			<artifactId>javamelody-core</artifactId>
-			<version>1.62.0</version>
+			<version>${javamelody.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jrobin</groupId>
