--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>toutatice-ecm.acrennes</groupId>
-	<artifactId>acrennes-nx-distrib</artifactId>
-	<version>4.7-SNAPSHOT</version>
+	<artifactId>toutatice-nuxeo-apps-distrib</artifactId>
+	<version>4.8-SNAPSHOT</version>
 	<name>Ac-rennes nuxeo distribution</name>
 	<packaging>pom</packaging>
 
 	<properties>
 		<nuxeo.version>6.1.3</nuxeo.version>
 		<opentoutatice.version>4.7.28</opentoutatice.version>
-		<ottc.es.version>4.7.22</ottc.es.version>
+		<ottc.es.version>4.8-SNAPSHOT</ottc.es.version>
 		<ottc.collab.version>4.7.17</ottc.collab.version>
 		<ottc.filenaming.version>4.7.17</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.7.17</ottc.file.versioning.version>
