--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 		<publidoc.version>4.3.0</publidoc.version>
 		<uar.version>4.3.4</uar.version>
 		<ACRENNES3.version>2.5.1</ACRENNES3.version>
-		<ACRENNES4.version>2.5.3-RC01</ACRENNES4.version>
+		<ACRENNES4.version>2.5.5</ACRENNES4.version>
 		<ACRENNES6.version>2.2.1</ACRENNES6.version>
 
 		<!-- Logs -->
