--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 
 	<properties>
 		<nuxeo.version>6.1.3</nuxeo.version>
-		<opentoutatice.version>4.7.30</opentoutatice.version>
+		<opentoutatice.version>4.7.31-RC01</opentoutatice.version>
 		<ottc.es.version>4.7.22</ottc.es.version>
-		<ottc.collab.version>4.7.17</ottc.collab.version>
+		<ottc.collab.version>4.7.31-RC01</ottc.collab.version>
 		<ottc.filenaming.version>4.7.17</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.7.17</ottc.file.versioning.version>
 		<!-- <ottc.wf.version>4.6</ottc.wf.version> -->
@@ -39,7 +39,7 @@
 		<ottc.migration.version>4.7-RC01</ottc.migration.version>
 
 		<!-- Add-ons métier -->
-		<acrennes.version>4.1.14-RC01</acrennes.version>
+		<acrennes.version>4.1.15-RC01</acrennes.version>
 		<shortname.version>1.0.4</shortname.version>
 
 		<toutapad.version>4.7.17</toutapad.version>
