--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<nuxeo.version>6.1.3</nuxeo.version>
 		<nuxeodrive.version>6.1.3</nuxeodrive.version>
 		
-		<opentoutatice.version>4.4.31.2</opentoutatice.version>
+		<opentoutatice.version>4.4.31.3</opentoutatice.version>
 		<ottc.es.version>4.4.26.1</ottc.es.version>
 		<ottc.collab.version>4.4.30.1</ottc.collab.version>
 		<ottc.filenaming.version>4.7.17</ottc.filenaming.version>
@@ -488,7 +488,15 @@
 			<groupId>com.phloc</groupId>
     		<artifactId>phloc-commons</artifactId>
   			<version>4.3.2</version>
-		</dependency>		
+		</dependency>
+
+		<!-- For unzip feature -->
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.23.0</version>
+		</dependency>
 		
 		<!-- JWT lib -->
 		<dependency>
