--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>opentoutatice-ecm.distribtion</groupId>
     <artifactId>ottc-collab-nx-distrib</artifactId>
-    <version>4.5</version>
+    <version>4.6-SNAPSHOT</version>
     <name>Open toutatice + collab modules nuxeo distribution</name>
     <packaging>pom</packaging>
 
